Improved benchmark code.
Now reporting also message statistics on server-side,
since request statistics were a bit misleading.